# SVD-LLM

./: .gitignore  pyproject.toml
examples/: svdllm_hf.py  wiktext_ppl.py
svdllm/: base.py
svdllm/core/: svd.py
svdllm/utils/: data_utils.py
