[project]
name = "svd-llm"
version = "0.1.0"
requires-python = "==3.10.0"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "evaluate>=0.4.4",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers==4.47.1",
]
